--- a/.github/actions/build-dependencies/action.yaml
+++ b/.github/actions/build-dependencies/action.yaml
@@ -53,6 +53,11 @@ runs:
         GOROOT=/usr/local/go GOPATH=$HOME/go go install honnef.co/go/tools/cmd/staticcheck@latest
         sudo cp $HOME/go/bin/staticcheck /usr/bin/
       shell: bash
+    - name: Install revive
+      run: |
+        GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/mgechev/revive@latest
+        sudo cp $HOME/go/bin/revive /usr/bin/
+      shell: bash
     - name: Install goimports-reviser
       run: |
         GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest
