--- a/builder/Dockerfile.ubuntu-tracee-make
+++ b/builder/Dockerfile.ubuntu-tracee-make
@@ -79,6 +79,11 @@ RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install honnef.co/go/tools/cmd/stati
 RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest && \
     cp $HOME/go/bin/goimports-reviser /usr/bin/
 
+# install revive
+
+RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/mgechev/revive@latest && \
+    cp $HOME/go/bin/revive /usr/bin/
+
 # install errcheck
 
 RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/kisielk/errcheck@latest && \
