e2e: single binary instrumentation tests
Changed the e2e instrumentation tests to work with the single binary
tracee.

Added a test for the data sources feature

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -36,7 +36,7 @@ env:
   ARM64_TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
   RHEL_ARM64_TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018 TRC-1022"
   NETTESTS: "IPv4 IPv6 TCP UDP ICMP ICMPv6 DNS HTTP"
-  INSTTESTS: "VFS_WRITE FILE_MODIFICATION SECURITY_INODE_RENAME"
+  INSTTESTS: "VFS_WRITE FILE_MODIFICATION SECURITY_INODE_RENAME CONTAINERS_DATA_SOURCE"
 jobs:
   #
   # CODE VERIFICATION (github runner)
