k8s: remove postee denpedency
Postee will no longer be a dependency, users will be able to customize
webhook, and install postee separatedly if they want to use both tracee,
and postee together.

--- a/deploy/helm/tracee/values.yaml
+++ b/deploy/helm/tracee/values.yaml
@@ -54,11 +54,7 @@ tolerations:
 
 affinity: {}
 
-postee:
-  # enabled is a flag to install Postee subchart and configure Tracee to forward
-  # threat detections to the Postee webhook endpoint.
-  enabled: false
-  webhook: http://tracee-postee:8082
+webhook: ""
 
 signatures:
   # config defines Common Expression Language (CEL) signatures that are loaded
