--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -34,8 +34,8 @@ spec:
             - --filter set=signatures
             - --output json
             - --containers
-          {{- if .Values.postee.enabled }}
-            - --output webhook:{{ .Values.postee.webhook }}
+          {{- if .Values.webhook }}
+            - --output webhook:{{ .Values.webhook }}
           {{- end }}
           env:
             - name: LIBBPFGO_OSRELEASE_FILE
