--- a/deploy/kubernetes/tracee/tracee.yaml
+++ b/deploy/kubernetes/tracee/tracee.yaml
@@ -1,9 +1,10 @@
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   labels:
-    app.kubernetes.io/component: tracee
     app.kubernetes.io/name: tracee
+    app.kubernetes.io/component: tracee
     app.kubernetes.io/part-of: tracee
   name: tracee
 spec:
@@ -17,23 +18,23 @@ spec:
       name: tracee
     spec:
       containers:
-      - args:
-        - --filter set=signatures
-        - --output json
-        - --containers
-        env:
-        - name: LIBBPFGO_OSRELEASE_FILE
-          value: /etc/os-release-host
+      - name: tracee
         image: docker.io/aquasec/tracee:0.14.2
         imagePullPolicy: IfNotPresent
-        name: tracee
+        args:
+          - --filter set=signatures
+          - --output json
+          - --containers
+        env:
+          - name: LIBBPFGO_OSRELEASE_FILE
+            value: /etc/os-release-host
         securityContext:
           privileged: true
         volumeMounts:
-        - mountPath: /tmp/tracee
-          name: tmp-tracee
-        - mountPath: /etc/os-release-host
-          name: etc-os-release
+        - name: tmp-tracee
+          mountPath: /tmp/tracee
+        - name: etc-os-release
+          mountPath: /etc/os-release-host
           readOnly: true
         - mountPath: /var/run/containerd/containerd.sock
           name: containerd-sock
@@ -47,11 +48,25 @@ spec:
         - mountPath: /var/run/podman/podman.sock
           name: podman-sock
           readOnly: true
+        # NOTE: Resource consumption will vary between different use cases and
+        # workload characteristics. User should monitor tracee for resource
+        # consumption before enabling resource limits. Capping tracee
+        # resources may cause loss of events and miss detections. Golang
+        # signatures outperforms REGO signatures, use less HW resources,
+        # and are preferred if that is an option.
+        # resources:
+        # resources:
+        #   limits:
+        #     cpu: "1"
+        #     memory: 1Gi # tracee has a 512MB in-memory events cache enabled by default
+        #   requests:
+        #     cpu: "1"
+        #     memory: 1Gi
       tolerations:
-      - effect: NoSchedule
-        operator: Exists
-      - effect: NoExecute
-        operator: Exists
+        - effect: NoSchedule
+          operator: Exists
+        - effect: NoExecute
+          operator: Exists
       volumes:
       - hostPath:
           path: /tmp/tracee
