k8s: add configmap for tracee configuration

--- a/deploy/helm/tracee/values.yaml
+++ b/deploy/helm/tracee/values.yaml
@@ -56,6 +56,31 @@ affinity: {}
 
 webhook: ""
 
+traceeConfig: {}
+
+config:
+  blobPerfBufferSize: ""
+  perfBufferSize: 1024
+  containers: true
+  healthz: false
+  metrics: true
+  pprof: false
+  pyroscope: false
+  listenAddr: :3366
+  installPath: ""
+  signaturesDir: ""
+  capabilities: []
+  crs: []
+  rego: []
+  cache:
+    - cache-type=mem
+    - mem-cache-size=512
+  log:
+    - info
+  output:
+    - json
+    - option:parse-arguments
+
 signatures:
   # config defines Common Expression Language (CEL) signatures that are loaded
   # by Tracee-Rules from the --rules-dir directory. If the config object is not
