--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -30,10 +30,13 @@ spec:
         - name: tracee
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command:
+            - /tracee/tracee
           args:
-            - --filter set=signatures
-            - --output json
-            - --containers
+            - --filter
+            - set=signatures
+            - --config
+            - /tracee/config.yaml
           {{- if .Values.webhook }}
             - --output webhook:{{ .Values.webhook }}
           {{- end }}
@@ -60,8 +63,12 @@ spec:
             - mountPath: /var/run/podman/podman.sock
               name: podman-sock
               readOnly: true
-            {{- if .Values.signatures.config }}
             - name: tracee-config
+              readOnly: true
+              mountPath: /tracee/config.yaml
+              subPath: config.yaml
+            {{- if .Values.signatures.config }}
+            - name: tracee-signatures
               mountPath: /tracee/signatures/signatures.yaml
               subPath: signatures.yaml
               readOnly: true
@@ -99,20 +106,77 @@ spec:
         - name: docker-sock
           hostPath:
             path: /var/run/docker.sock
-        {{- if .Values.signatures.config }}
         - name: tracee-config
           configMap:
-            name: tracee-config
+            name: tracee
+        {{- if .Values.signatures.config }}
+        - name: tracee-signatures
+          configMap:
+            name: tracee-signatures
             items:
               - key: signatures.yaml
                 path: signatures.yaml
         {{- end }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: tracee
+  labels:
+    {{- include "tracee.labels" . | nindent 4 }}
+data:
+  {{- if .Values.traceeConfig }}
+  config.yaml:
+    {{- toYaml .Values.traceeConfig | nindent 4 }}
+  {{- else }}
+  config.yaml: |-
+    {{- if .Values.config.blobPerfBufferSize }}
+    blob-perf-buffer-size: {{ .Values.config.blobPerfBufferSize}}
+    {{- end }}
+    perf-buffer-size: {{ .Values.config.perfBufferSize }}
+    containers: {{ .Values.config.containers }}
+    healthz: {{ .Values.config.healthz }}
+    metrics: {{ .Values.config.metrics }}
+    pprof: {{ .Values.config.pprof }}
+    pyroscope: {{ .Values.config.pyroscope }}
+    listen-addr: {{ .Values.config.listenAddr }}
+    {{- if .Values.config.installPath }}
+    install-path:  {{ .Values.config.installPath }}
+    {{- end }}
+    {{- if .Values.config.signaturesDir }}
+    signatures-dir: {{ .Values.config.signaturesDir }}
+    {{- end }}
+    {{- with .Values.config.capabilities }}
+    capabilities:
+      {{- toYaml . | nindent 8 }}
+    {{- end }}
+    {{- with .Values.config.crs }}
+    crs:
+      {{- toYaml . | nindent 8 }}
+    {{- end }}
+    {{- with .Values.config.rego }}
+    rego:
+      {{- toYaml . | nindent 8 }}
+    {{- end }}
+    {{- with .Values.config.cache }}
+    cache:
+      {{- toYaml . | nindent 8 }}
+    {{- end }}
+    {{- with .Values.config.log }}
+    log:
+      {{- toYaml . | nindent 8 }}
+    {{- end }}
+    {{- with .Values.config.output }}
+    output:
+      {{- toYaml . | nindent 8 }}
+    {{- end }}
+  {{- end }}
 {{- if .Values.signatures.config }}
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: tracee-config
+  name: tracee-signatures
   labels:
     {{- include "tracee.labels" . | nindent 4 }}
 data:
