--- a/deploy/kubernetes/tracee/tracee.yaml
+++ b/deploy/kubernetes/tracee/tracee.yaml
@@ -1,4 +1,30 @@
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  labels:
+    app.kubernetes.io/name: tracee
+    app.kubernetes.io/component: tracee
+    app.kubernetes.io/part-of: tracee
+  name: tracee
+data:
+  config.yaml: |-
+    cache:
+      - cache-type=mem
+      - mem-cache-size=512
+    perf-buffer-size: 1024
+    containers: true
+    healthz: false
+    metrics: true
+    pprof: false
+    pyroscope: false
+    listen-addr: :3366
+    log:
+        - info
+    output:
+        - json
+        - option:parse-arguments
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -21,10 +47,13 @@ spec:
       - name: tracee
         image: docker.io/aquasec/tracee:0.14.2
         imagePullPolicy: IfNotPresent
+        command: 
+          - /tracee/tracee
         args:
-          - --filter set=signatures
-          - --output json
-          - --containers
+          - --filter
+          - set=signatures
+          - --config 
+          - /tracee/config.yaml
         env:
           - name: LIBBPFGO_OSRELEASE_FILE
             value: /etc/os-release-host
@@ -48,6 +77,10 @@ spec:
         - mountPath: /var/run/podman/podman.sock
           name: podman-sock
           readOnly: true
+        - name: tracee-config
+          readOnly: true
+          mountPath: /tracee/config.yaml
+          subPath: config.yaml
         # NOTE: Resource consumption will vary between different use cases and
         # workload characteristics. User should monitor tracee for resource
         # consumption before enabling resource limits. Capping tracee
@@ -86,3 +119,6 @@ spec:
       - hostPath:
           path: /var/run/docker.sock
         name: docker-sock
+      - name: tracee-config 
+        configMap:
+          name: tracee
