workflow: guarantee release has needed tags
The git checkout might be a shallow clone and not have all needed tags
in order for "git describe" to work, knowing the exact version to be
released.

--- a/.github/workflows/release-arm64-only.yaml
+++ b/.github/workflows/release-arm64-only.yaml
@@ -21,6 +21,9 @@ jobs:
       - name: AWS Environment
         run: |
           dmidecode
+      - name: Fetch all tags for sure
+        run: |
+          git fetch --tags
       - name: Login to docker.io registry
         uses: docker/login-action@v2
         with:
