--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: AWS Environment
         run: |
           dmidecode
+      - name: Fetch all tags for sure
+        run: |
+          git fetch --tags
       - name: Login to docker.io registry
         uses: docker/login-action@v2
         with:
@@ -65,6 +68,9 @@ jobs:
       - name: AWS Environment
         run: |
           dmidecode
+      - name: Fetch all tags for sure
+        run: |
+          git fetch --tags
       - name: Login to docker.io registry
         uses: docker/login-action@v2
         with:
