--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: AWS Environment
         run: |
           dmidecode
+      - name: Fetch all tags for sure
+        run: |
+          git fetch --tags
       - name: Login to docker.io registry
         uses: docker/login-action@v2
         with:
@@ -61,6 +64,9 @@ jobs:
       - name: AWS Environment
         run: |
           dmidecode
+      - name: Fetch all tags for sure
+        run: |
+          git fetch --tags
       - name: Login to docker.io registry
         uses: docker/login-action@v2
         with:
