btfhub: fix tracee container image with btfhub
Currently, after the single binary was added to the official container
image, I believe BTFHUB support has not been included in the binaries of
the docker images. This needs fixing asap as this is what allows tracee
to be fully portable.

This is an important fix if you want to run tracee in older kernels.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,6 @@
-./dist/*
-./3rdparty/btfhub
-./3rdparty/btfhub/*
-./3rdparty/btfhub-archive
-./3rdparty/btfhub-archive/*
-./tests/distro-tester/*
+dist/*
+3rdparty/btfhub
+3rdparty/btfhub/*
+3rdparty/btfhub-archive
+3rdparty/btfhub-archive/*
+tests/distro-tester/*
