--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -33,6 +33,7 @@ spec:
           args:
             - --filter set=signatures
             - --output json
+            - --containers
           {{- if .Values.postee.enabled }}
             - --output webhook:{{ .Values.postee.webhook }}
           {{- end }}
@@ -46,6 +47,18 @@ spec:
               mountPath: /tmp/tracee
             - name: etc-os-release
               mountPath: /etc/os-release-host
+              readOnly: true
+            - mountPath: /var/run/containerd/containerd.sock
+              name: containerd-sock
+              readOnly: true
+            - mountPath: /var/run/crio/crio.sock
+              name: crio-sock
+              readOnly: true
+            - mountPath: /var/run/docker.sock
+              name: docker-sock
+              readOnly: true
+            - mountPath: /var/run/podman/podman.sock
+              name: podman-sock
               readOnly: true
             {{- if .Values.signatures.config }}
             - name: tracee-config
@@ -74,6 +87,18 @@ spec:
         - name: etc-os-release
           hostPath:
             path: /etc/os-release
+        - name: containerd-sock
+          hostPath:
+            path: /var/run/containerd/containerd.sock
+        - name: crio-sock
+          hostPath:
+            path: /var/run/crio/crio.sock
+        - name: podman-sock
+          hostPath:
+            path: /var/run/podman/podman.sock
+        - name: docker-sock
+          hostPath:
+            path: /var/run/docker.sock
         {{- if .Values.signatures.config }}
         - name: tracee-config
           configMap:
