--- a/deploy/kubernetes/kustomize/base/tracee.yaml
+++ b/deploy/kubernetes/kustomize/base/tracee.yaml
@@ -24,16 +24,29 @@ spec:
         args:
           - --filter set=signatures
           - --output json
+          - --containers
         env:
           - name: LIBBPFGO_OSRELEASE_FILE
             value: /etc/os-release-host
         securityContext:
           privileged: true
         volumeMounts:
-        - name: tmp-tracee
-          mountPath: /tmp/tracee
-        - name: etc-os-release
-          mountPath: /etc/os-release-host
+        - mountPath: /tmp/tracee
+          name: tmp-tracee
+        - mountPath: /etc/os-release-host
+          name: etc-os-release
+          readOnly: true
+        - mountPath: /var/run/containerd/containerd.sock
+          name: containerd-sock
+          readOnly: true
+        - mountPath: /var/run/crio/crio.sock
+          name: crio-sock
+          readOnly: true
+        - mountPath: /var/run/docker.sock
+          name: docker-sock
+          readOnly: true
+        - mountPath: /var/run/podman/podman.sock
+          name: podman-sock
           readOnly: true
         # NOTE: Resource consumption will vary between different use cases and
         # workload characteristics. User should monitor tracee for resource
@@ -55,9 +68,21 @@ spec:
         - effect: NoExecute
           operator: Exists
       volumes:
-      - hostPath:
+      - name: tmp-tracee
+        hostPath:
           path: /tmp/tracee
-        name: tmp-tracee
-      - hostPath:
+      - name: etc-os-release
+        hostPath:
           path: /etc/os-release
-        name: etc-os-release
+      - name: containerd-sock
+        hostPath:
+          path: /var/run/containerd/containerd.sock
+      - name: crio-sock
+        hostPath:
+          path: /var/run/crio/crio.sock
+      - name: podman-sock
+        hostPath:
+          path: /var/run/podman/podman.sock
+      - name: docker-sock
+        hostPath:
+          path: /var/run/docker.sock
