--- a/deploy/kubernetes/tracee-postee/tracee.yaml
+++ b/deploy/kubernetes/tracee-postee/tracee.yaml
@@ -21,6 +21,7 @@ spec:
         - --filter set=signatures
         - --output json
         - --output webhook:http://postee-svc:8082
+        - --containers
         env:
         - name: LIBBPFGO_OSRELEASE_FILE
           value: /etc/os-release-host
@@ -35,6 +36,18 @@ spec:
         - mountPath: /etc/os-release-host
           name: etc-os-release
           readOnly: true
+        - mountPath: /var/run/containerd/containerd.sock
+          name: containerd-sock
+          readOnly: true
+        - mountPath: /var/run/crio/crio.sock
+          name: crio-sock
+          readOnly: true
+        - mountPath: /var/run/docker.sock
+          name: docker-sock
+          readOnly: true
+        - mountPath: /var/run/podman/podman.sock
+          name: podman-sock
+          readOnly: true
       tolerations:
       - effect: NoSchedule
         operator: Exists
@@ -47,3 +60,15 @@ spec:
       - hostPath:
           path: /etc/os-release
         name: etc-os-release
+      - hostPath:
+          path: /var/run/containerd/containerd.sock
+        name: containerd-sock
+      - hostPath:
+          path: /var/run/crio/crio.sock
+        name: crio-sock
+      - hostPath:
+          path: /var/run/podman/podman.sock
+        name: podman-sock
+      - hostPath:
+          path: /var/run/docker.sock
+        name: docker-sock
