workflow: add cosign to release snapshot

--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -19,6 +19,10 @@ jobs:
       [
         "github-self-hosted_ami-0f4881c8d69684001_${{ github.event.number }}-${{ github.run_id }}",
       ]
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
     steps:
       - name: Install Cosign
         uses: sigstore/cosign-installer@main
@@ -52,15 +56,19 @@ jobs:
           docker image tag tracee:latest aquasec/tracee:x86_64-dev
           docker image push aquasec/tracee:dev
           docker image push aquasec/tracee:x86_64-dev
-      - name: docker inspect
+      - name: Sign Docker image
         run: |
-          docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:dev
+          cosign sign $(docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:dev)
   release-snapshot-arm64:
     name: Release Snapshot ARM64
     runs-on:
       [
         "github-self-hosted_ami-03217ce7c37572c4d_${{ github.event.number }}-${{ github.run_id }}",
       ]
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
     steps:
       - name: Install Cosign
         uses: sigstore/cosign-installer@main
@@ -92,6 +100,6 @@ jobs:
         run: |
           docker image tag tracee:latest aquasec/tracee:aarch64-dev
           docker image push aquasec/tracee:aarch64-dev
-      - name: docker inspect
+      - name: Sign Docker image
         run: |
-          docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:aarch64-dev
+          cosign sign $(docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:aarch64-dev)
