workflow: ignore cosign prompt

--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -58,7 +58,7 @@ jobs:
           docker image push aquasec/tracee:x86_64-dev
       - name: Sign Docker image
         run: |
-          cosign sign $(docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:dev)
+          cosign sign -y $(docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:dev)
   release-snapshot-arm64:
     name: Release Snapshot ARM64
     runs-on:
@@ -102,4 +102,4 @@ jobs:
           docker image push aquasec/tracee:aarch64-dev
       - name: Sign Docker image
         run: |
-          cosign sign $(docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:aarch64-dev)
+          cosign sign -y $(docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:aarch64-dev)
