workflow: sign aquasec/tracee:x86_64-dev

--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -59,6 +59,7 @@ jobs:
       - name: Sign Docker image
         run: |
           cosign sign -y $(docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:dev)
+          cosign sign -y $(docker inspect --format='{{index .RepoDigests 0}}' aquasec/tracee:x86_64-dev)
   release-snapshot-arm64:
     name: Release Snapshot ARM64
     runs-on:
