--- a/deploy/helm/tracee/values.yaml
+++ b/deploy/helm/tracee/values.yaml
@@ -62,7 +62,7 @@ config:
   blobPerfBufferSize: ""
   perfBufferSize: 1024
   containers: true
-  healthz: false
+  healthz: true
   metrics: true
   pprof: false
   pyroscope: false
