k8s: add default signatures policy

--- a/deploy/kubernetes/tracee/tracee.yaml
+++ b/deploy/kubernetes/tracee/tracee.yaml
@@ -6,7 +6,54 @@ metadata:
     app.kubernetes.io/name: tracee
     app.kubernetes.io/component: tracee
     app.kubernetes.io/part-of: tracee
-  name: tracee
+  name: tracee-policies
+data:
+  signatures.yaml: |-
+    name: signature_events
+    description: traces all signature events
+    defaultAction: log
+    scope:
+      - global
+    rules:
+      - event: stdio_over_socket
+      - event: k8s_api_connection
+      - event: aslr_inspection
+      - event: proc_mem_code_injection
+      - event: docker_abuse
+      - event: scheduled_task_mod
+      - event: ld_preload
+      - event: cgroup_notify_on_release
+      - event: default_loader_mod
+      - event: sudoers_modification
+      - event: sched_debug_recon
+      - event: system_request_key_mod
+      - event: cgroup_release_agent
+      - event: rcd_modification
+      - event: core_pattern_modification
+      - event: proc_kcore_read
+      - event: proc_mem_access
+      - event: hidden_file_created
+      - event: anti_debugging
+      - event: ptrace_code_injection
+      - event: process_vm_write_inject
+      - event: disk_mount
+      - event: dynamic_code_loading
+      - event: fileless_execution
+      - event: illegitimate_shell
+      - event: kernel_module_loading
+      - event: k8s_cert_theft
+      - event: proc_fops_hooking
+      - event: syscall_hooking
+      - event: dropped_executable
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  labels:
+    app.kubernetes.io/name: tracee
+    app.kubernetes.io/component: tracee
+    app.kubernetes.io/part-of: tracee
+  name: tracee-config
 data:
   config.yaml: |-
     cache:
@@ -50,8 +97,8 @@ spec:
         command: 
           - /tracee/tracee
         args:
-          - --filter
-          - set=signatures
+          - --policy
+          - /tracee/policies
           - --config 
           - /tracee/config.yaml
         env:
@@ -85,6 +132,9 @@ spec:
           readOnly: true
           mountPath: /tracee/config.yaml
           subPath: config.yaml
+        - name: tracee-policies
+          readOnly: true
+          mountPath: /tracee/policies
         # NOTE: Resource consumption will vary between different use cases and
         # workload characteristics. User should monitor tracee for resource
         # consumption before enabling resource limits. Capping tracee
@@ -123,6 +173,9 @@ spec:
       - hostPath:
           path: /var/run/docker.sock
         name: docker-sock
-      - name: tracee-config 
+      - name: tracee-config
         configMap:
-          name: tracee
+          name: tracee-config
+      - name: tracee-policies
+        configMap:
+          name: tracee-policies
