--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -33,8 +33,8 @@ spec:
           command:
             - /tracee/tracee
           args:
-            - --filter
-            - set=signatures
+            - --policy
+            - /tracee/policies
             - --config
             - /tracee/config.yaml
           {{- if .Values.webhook }}
@@ -73,6 +73,9 @@ spec:
               readOnly: true
               mountPath: /tracee/config.yaml
               subPath: config.yaml
+            - name: tracee-policies
+              readOnly: true
+              mountPath: /tracee/policies
             {{- if .Values.signatures.config }}
             - name: tracee-signatures
               mountPath: /tracee/signatures/signatures.yaml
@@ -114,7 +117,10 @@ spec:
             path: /var/run/docker.sock
         - name: tracee-config
           configMap:
-            name: tracee
+            name: tracee-config
+        - name: tracee-policies
+          configMap:
+            name: tracee-policies
         {{- if .Values.signatures.config }}
         - name: tracee-signatures
           configMap:
@@ -123,60 +129,6 @@ spec:
               - key: signatures.yaml
                 path: signatures.yaml
         {{- end }}
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: tracee
-  labels:
-    {{- include "tracee.labels" . | nindent 4 }}
-data:
-  {{- if .Values.traceeConfig }}
-  config.yaml:
-    {{- toYaml .Values.traceeConfig | nindent 4 }}
-  {{- else }}
-  config.yaml: |-
-    {{- if .Values.config.blobPerfBufferSize }}
-    blob-perf-buffer-size: {{ .Values.config.blobPerfBufferSize}}
-    {{- end }}
-    perf-buffer-size: {{ .Values.config.perfBufferSize }}
-    containers: {{ .Values.config.containers }}
-    healthz: {{ .Values.config.healthz }}
-    metrics: {{ .Values.config.metrics }}
-    pprof: {{ .Values.config.pprof }}
-    pyroscope: {{ .Values.config.pyroscope }}
-    listen-addr: {{ .Values.config.listenAddr }}
-    {{- if .Values.config.installPath }}
-    install-path:  {{ .Values.config.installPath }}
-    {{- end }}
-    {{- if .Values.config.signaturesDir }}
-    signatures-dir: {{ .Values.config.signaturesDir }}
-    {{- end }}
-    {{- with .Values.config.capabilities }}
-    capabilities:
-      {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.config.crs }}
-    crs:
-      {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.config.rego }}
-    rego:
-      {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.config.cache }}
-    cache:
-      {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.config.log }}
-    log:
-      {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.config.output }}
-    output:
-      {{- toYaml . | nindent 8 }}
-    {{- end }}
-  {{- end }}
 {{- if .Values.signatures.config }}
 ---
 apiVersion: v1
